--- a/Talk.tex
+++ b/Talk.tex
@@ -508,7 +508,7 @@
 	\begin{align*}
 		\left\langle \raisebox{-20pt}{\includegraphics[width=1.8cm]{pic/trifoilkaff.png}} \right\rangle & = A\left\langle \raisebox{-20pt}{\includegraphics[width=1.8cm]{pic/trifoilkaff1.png}} \right\rangle +A^{-1} \left\langle \raisebox{-20pt}{\includegraphics[width=1.8cm]{pic/trifoilkaff2.png}} \right\rangle \\
 		                                                                                                & = A(-A^3)^2+A^{-1} (-A^{-4}-A^4) =A^7-A^3-A^{-5}                                                                                                                                                             \\
-		w(\raisebox{-20pt}{\includegraphics[width=1.8cm]{pic/trifoil.png}})                       & =-3                                                                                                                                                                                                          \\
+		w(\raisebox{-20pt}{\includegraphics[width=1.8cm]{pic/trifoil.png}})                             & =-3                                                                                                                                                                                                          \\
 		V(\raisebox{-20pt}{\includegraphics[width=1.8cm]{pic/trifoil.png}})                             & = \left(-A^{16}+A^{12}+A^4\right)_{t^{1/2}=A^{-2}} = -t^{-4}+t^{-3}+t^{-1}
 	\end{align*}
 
@@ -709,7 +709,7 @@
 \begin{frame}[c]
 	\frametitle{Coloured Jones Polynomials}
 
-	None of the three methods discussed in this talk was Jones' original approach, where his formulation of the polynomial came from his study of operator algebras. His work is generalized to vase families of invariants, called quantum invariants.
+	None of the three methods discussed in this talk was Jones' original approach, where his formulation of the polynomial came from his study of operator algebras. His work is generalized to vast families of invariants, called quantum invariants.
 
 	\begin{itemize}
 		\item The coloured Jones polynomials is an infinite sequence of Laurent polynomials $\{J_{K,n}(t)\}_n$, encoding the Jones polynomial of $K$ and these of the links $K^s$ that are the \emph{parallels} of $K$.
